@@ -16,7 +16,7 @@ nop
 
 move $a0, $v0		/* set the return value of the function for arg0 of the next function */
 
-lui $a1, 0x0881		/* arg1 is 0x08810000, load address of the binary file */
+lui $a1, 0x08D2 	/* arg1 is 0x08D20000, load address of the binary file */
 lui $a2, 1		/* arg2, read 0x10000 bytes from the file */
 jal 0x08A88578		/* sceIoRead */
 nop
@@ -24,14 +24,14 @@ nop
 jal 0x08A88590		/* sceIoClose */
 nop
 
-lui $a0, 0x0881
+lui $a0, 0x08D2
 lui $a1, 0x1
 jal 0x08A887C0		/* sceKernelDcacheWritebackInvalidateAll */
 nop
 
 nop
 nop
-li $a0, 0x08810000
+li $a0, 0x08D20000
 jr $a0
 nop
 
